--- a/app/src/main/res/layout/send_activity.xml
+++ b/app/src/main/res/layout/send_activity.xml
@@ -6,12 +6,32 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/send_btn"
+        android:id="@+id/create_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="50dp"
-        android:text="send to" />
+        android:text="create" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/read_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="read" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/add_more_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="add more" />
+
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/result_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="result" />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/action_btn"
